--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
     // -->
   </div>
 
+  <audio src="thats_numberwang.mp3" id="thats-numberwang"></audio>
+  <audio src="intro.mp3" id="intro" autoplay="autoplay"></audio>
+
   <script>
     var el = document.getElementById('score-goal');
     var max = 26000;
